Tidied up dependencies using dependencyManagement and pluginManagment sections.